--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>News Aggregator</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/styles/index.css">
+    <title>News Aggregator</title>
 </head>
 <body>
-  <h1 class="site-title">News Aggregator</h1>
   
-  <div class="search-container">
-    <input type="text" name="search" id="search" placeholder="Type and press enter to search..." />
-  </div>
 
-  <ul id="news-articles">
+	<h1 class="site-title">News Aggregator</h1>
+    <input type="text" id="search" placeholder="Type and press enter to search" onkeyup="EnterSearch()">
+    <p id="not-found"></p>
 
-  </ul>
+    <ul id="news-articles">
+        <li class="article">
+            <img class="article-img" src="" >
+            <h2 class="article-title"></h2>
+            <p class="article-description"></p>
+            <span class="article-author"></span>-
+            <!-- <a class="article-link"></a> -->
+        </li> 
+    </ul>
+
+
+    <div id="pagination"></div>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
