--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   
 
 	<h1 class="site-title">News Aggregator</h1>
-    <input type="text" id="search" placeholder="Type and press enter to search" onkeyup="EnterSearch()">
+    <input type="text" id="search" placeholder="Type and press enter to search..." onkeyup="EnterSearch()">
     <p id="not-found"></p>
 
     <ul id="news-articles">
@@ -19,7 +19,7 @@
             <h2 class="article-title"></h2>
             <p class="article-description"></p>
             <span class="article-author"></span>-
-            <!-- <a class="article-link"></a> -->
+            
         </li> 
     </ul>
 
