--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 	<h1 class="site-title">News Aggregator</h1>
     <input type="text" id="search" placeholder="Type and press enter to search..." onkeyup="EnterSearch()">
-    <p id="not-found"></p>
+    <p class="not-found"></p>
 
     <ul id="news-articles">
         <li class="article">
