--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 	<h1 class="site-title">News Aggregator</h1>
     <input type="text" id="search" placeholder="Type and press enter to search..." onkeyup="EnterSearch()">
-    <p class="not-found"></p>
+    <div class="not-found"></div>
 
     <ul id="news-articles">
         <li class="article">
@@ -23,6 +23,8 @@
         </li> 
     </ul>
 
+
+    <div id="pagination"></div>
     <script src="./scripts/index.js"></script>
 </body>
 </html>
