--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 	<h1 class="site-title">News Aggregator</h1>
     <input type="text" id="search" placeholder="Type and press enter to search..." onkeyup="EnterSearch()">
-    <div class="not-found"></div>
+    <div class="not-found">No article was found based on the search.</div>
 
     <ul id="news-articles">
         <li class="article">
